src/tests/fixtures/unions/DefineUnionTypeContainingInterface.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @GQLType */
export default class Query {
  /** @GQLField */
  me: Actor;
}

/** @GQLType */
class User {
  /** @GQLField */
  name: string;
}

/** @GQLInterface */
interface Entity {
  /** @GQLField */
  description: string;
}

/** @GQLUnion */
type Actor = User | Entity;

-----------------
OUTPUT
-----------------
Error: Union type Actor can only include Object types, it cannot include Entity.:
 --> src/tests/fixtures/unions/DefineUnionTypeContainingInterface.invalid.ts:20:21

   | /** @GQLUnion */
20 | type Actor = User | Entity;
   |                     ^ 
   | 
